<resources>
    <string name="app_name">Bread Winner</string>
    <string name="catchphrase">Smile, Love, Grow</string>
    <string name="developer">Everyday</string>
    <string name="copyright">All Rights Reserved. 2020</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="w1">Week 1</string>
    <string name="w2">Week 2</string>
    <string name="w3">Week 3</string>
    <string name="d1">Day 1</string>
    <string name="d2">Day 2</string>
    <string name="d3">Day 3</string>
    <string name="d4">Day 4</string>
    <string name="d5">Day 5</string>
    <string name="d6">Day 6</string>
    <string name="d7">Day 7</string>
    <string name="d8">Day 8</string>
    <string name="d9">Day 9</string>
    <string name="d10">Day 10</string>
    <string name="d11">Day 11</string>
    <string name="d12">Day 12</string>
    <string name="d13">Day 13</string>
    <string name="d14">Day 14</string>
    <string name="d15">Day 15</string>
    <string name="d16">Day 16</string>
    <string name="d17">Day 17</string>
    <string name="d18">Day 18</string>
    <string name="ud1">Available at Day 1</string>
    <string name="ud2">Available at Day 1</string>
    <string name="ud3">Available at Day 1</string>
    <string name="ud4">Available at Day 2</string>
    <string name="ud5">Available at Day 3</string>
    <string name="ud6">Available at Day 4</string>
    <string name="ud7">Available at Day 5</string>
    <string name="ud8">Available at Day 6</string>
    <string name="ud9">Available at Day 7</string>
    <string name="ud10">Available at Day 7</string>
    <string name="ud11">Available at Day 8</string>
    <string name="ud12">Available at Day 9</string>
    <string name="ud13">Available at Day 10</string>
    <string name="ud14">Available at Day 11</string>
    <string name="ud15">Available at Day 12</string>
    <string name="ud16">Available at Day 13</string>
    <string name="ud17">Available at Day 13</string>
    <string name="ud18">Available at Day 14</string>
    <string name="ud19">Available at Day 15</string>
    <string name="ud20">Available at Day 16</string>
    <string name="ud21">Available at Day 17</string>
    <string name="ud22">Available at Day 18</string>
    <string name="logo">App Logo</string>
    <string name="splashlogo">Splash Logo</string>
    <string name="b1">Bread 1</string>
    <string name="b2">Bread 2</string>
    <string name="b3">Bread 3</string>
    <string name="b4">Bread 4</string>
    <string name="b5">Bread 5</string>
    <string name="b6">Bread 6</string>
    <string name="b7">Bread 7</string>
    <string name="b8">Bread 8</string>
    <string name="b9">Bread 9</string>
    <string name="b10">Bread 10</string>
    <string name="b11">Bread 11</string>
    <string name="b12">Bread 12</string>
    <string name="b13">Bread 13</string>
    <string name="b14">Bread 14</string>
    <string name="b15">Bread 15</string>
    <string name="b16">Bread 16</string>
    <string name="b17">Bread 17</string>
    <string name="b18">Bread 18</string>
    <string name="b19">Bread 19</string>
    <string name="b20">Bread 20</string>
    <string name="b21">Bread 21</string>
    <string name="b22">Bread 22</string>
    <string name="bunknown">\???</string>
    <string name="bspecial">Special Strawberry</string>
    <string name="nb1">Cupcake</string>
    <string name="nb2">Sprinkle Donut</string>
    <string name="nb3">Muffin</string>
    <string name="nb4">Anadama bread</string>
    <string name="nb5">French Baguette</string>
    <string name="nb6">Scotch Pancakes</string>
    <string name="nb7">La Baccia Bread</string>
    <string name="nb8">Marraqueta bread</string>
    <string name="nb9">Zopf</string>
    <string name="nb10">Bread Roll</string>
    <string name="nb11">Borodinsky bread</string>
    <string name="nb12">Pretzel</string>
    <string name="nb13">Breadsticks</string>
    <string name="nb14">Pane di Altamura</string>
    <string name="nb15">Croissant</string>
    <string name="nb16">Rye Bread</string>
    <string name="nb17">Brioche Bread</string>
    <string name="nb18">Sufganiyah</string>
    <string name="nb19">Bammy</string>
    <string name="nb20">Cookies</string>
    <string name="nb21">Peanut Butter and Jelly Triangles</string>
    <string name="nb22">Glazed Donut</string>
    <string name="nbunknown">\???</string>
    <string name="rb8">Rotten Bread 8</string>
    <string name="rb9">Rotten Bread 9</string>
    <string name="rb10">Rotten Bread 10</string>
    <string name="rb11">Rotten Bread 11</string>
    <string name="rb12">Rotten Bread 12</string>
    <string name="rb13">Rotten Bread 13</string>
    <string name="rb14">Rotten Bread 14</string>
    <string name="rb15">Rotten Bread 15</string>
    <string name="rb16">Rotten Bread 16</string>
    <string name="rb17">Rotten Bread 17</string>
    <string name="rb18">Rotten Bread 18</string>
    <string name="rb19">Rotten Bread 19</string>
    <string name="rb20">Rotten Bread 20</string>
    <string name="rb21">Rotten Bread 21</string>
    <string name="rb22">Rotten Bread 22</string>
    <string name="sb1">Strawberry 1</string>
    <string name="sb2">Strawberry 2</string>
    <string name="sb3">Strawberry 3</string>
    <string name="start_day">Start!</string>
    <string name="next_day">Next Day!</string>
    <string name="retry">Retry!</string>
    <string name="menu">Main Menu</string>
    <string name="bmenu">Back to Menu</string>
    <string name="resume">Resume</string>
    <string name="music_on">Music: On</string>
    <string name="music_off">Music: Off</string>
    <string name="sound_on">Sound: On</string>
    <string name="sound_off">Sound: Off</string>
    <string name="yes">Yes</string>
    <string name="no">Nope</string>
    <string name="credits">Credits</string>
    <string name="settings">Settings</string>
    <string name="new_bread">New Bread!</string>
    <string name="two_breads">New Breads!</string>
    <string name="new_bread_text">Find out more about this bread in the menu</string>
    <string name="click_bread">Tap the bread to know more</string>
    <string name="two_breads_text">Find out more about these breads in the menu</string>
    <string name="paused">Paused</string>
    <string name="leaving">Are u leaving already? :c</string>
    <string name="success">Success!</string>
    <string name="failed">Failed!</string>
    <string name="target_score">Target Score: 0</string>
    <string name="current_score">High Score: 0</string>
    <string name="strawberries_earned">Strawberries Earned</string>
    <string name="great">Great!</string>
    <string name="instruction">Instructions!</string>
    <string name="instruction_msg">Press &amp; Hold the hand icon and move it left or right to catch all the pastries. For every pastry that you\'ll catch, you\'ll gain points. Missed it, and you\'ll lose points.</string>
    <string name="caution">Moldy Bread!</string>
    <string name="caution_msg">We recently discovered that some pastries contain molds. These pastries appear greenish, AVOID them as much as possible.</string>
    <string name="important">Important!</string>
    <string name="important_msg">Strawberries are running out of stock. Be sure to CATCH them when they appear.</string>
    <string name="got_it">Got It!</string>
    <string name="td1">Target Score: 2300</string>
    <string name="td2">Target Score: 3800</string>
    <string name="td3">Target Score: 5750</string>
    <string name="td4">Target Score: 8200</string>
    <string name="td5">Target Score: 11000</string>
    <string name="td6">Target Score: 14000</string>
    <string name="td7">Target Score: 7050</string>
    <string name="td8">Target Score: 11150</string>
    <string name="td9">Target Score: 15375</string>
    <string name="td10">Target Score: 19925</string>
    <string name="td11">Target Score: 25075</string>
    <string name="td12">Target Score: 31100</string>
    <string name="td13">Target Score: 18200</string>
    <string name="td14">Target Score: 24500</string>
    <string name="td15">Target Score: 31600</string>
    <string name="td16">Target Score: 39950</string>
    <string name="td17">Target Score: 47475</string>
    <string name="td18">Target Score: 56700</string>
    <string name="tap">Tap anywhere to continue</string>
    <string name="dev"> - Developers - </string>
    <string name="harold">Harold Abejaron</string>
    <string name="aileen">Aileen Barnido</string>
    <string name="graphics"> - Graphics - </string>
    <string name="macro">macrovector of Freepik</string>
    <string name="music"> - Music - </string>
    <string name="artist">AShamaluevMusic</string>
    <string name="def">Description </string>
    <string name="ing">Main Ingredients </string>
    <string name="origin">Place of Origin </string>
    <string name="def_b1">A cupcake is a small cake designed to serve one person,
                        which may be baked in a small thin paper or aluminum
                        cup. As with larger cakes, icing and other cake decorations
                        such as fruit and candy may be applied.
    </string>
    <string name="origin_b1">United States</string>
    <string name="def_b2">A soft and pillow yeasted doughnuts covered
                          with a decadent chocolate glaze and festive
                          sprinkles.
    </string>
    <string name="origin_b2">Netherlands</string>
    <string name="def_b3">A muffin is an individual-sized, baked product. It can
                          refer to two distinct items, a part-raised flatbread that
                          is baked and then cooked on a griddle and a cupcake-like quickbread that is chemically leavened and then
                          baked in a mold.
    </string>
    <string name="origin_b3">Wales</string>
    <string name="def_b4">Anadama Bread is a traditional yeast bread of
                          New England in the United States made with
                          wheat flour, cornmeal, molasses and sometimes
                          rye flour.
    </string>
    <string name="origin_b4">United States</string>
    <string name="def_b5">A baguette is a long, thin load of French Bread
                          that is commonly made from basic lean dough.
                          It is distinguishable by its length and crisp crust.
                          A baguette has a diameter of about 5 or 6 cm
                          and a usual length of about 65 cm, although
                          a baguette can be up to 1 m long.
    </string>
    <string name="origin_b5">France</string>
    <string name="def_b6">Scotch pancakes are also known as ‘drop’or ‘dropped scones’,
                          because soft dollops of mixture are dropped onto the cooking surface.
    </string>
    <string name="origin_b6">Scotland</string>
    <string name="def_b7">Light, flaky, soft textured sandwich roll
                          great for Paninis burgers, chicken
                          sandwiches, and deli-style sandwiches.
    </string>
    <string name="origin_b7">Italy</string>
    <string name="flour">Flour</string>
    <string name="sugar">Sugar</string>
    <string name="water">Water</string>
    <string name="yeast">Yeast</string>
    <string name="salt">Salt</string>
    <string name="c_oil">Canola Oil</string>
</resources>