<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home1_bg"
    android:orientation="vertical"
    tools:context=".CreditsActivity">

    <!-- Hamburger Button -->
    <Button
        android:id="@+id/btnHamburger"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/menu" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:gravity="center_horizontal"
        android:text="@string/credits"
        android:textColor="@color/colorPrimary"
        android:textSize="38sp" />

    <LinearLayout
        android:id="@+id/dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credits"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center_horizontal"
            android:text="@string/dev"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_horizontal"
            android:text="@string/harold"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_horizontal"
            android:text="@string/aileen"
            android:textColor="@color/grey"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/graphics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dev"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center_horizontal"
            android:text="@string/graphics"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_horizontal"
            android:text="@string/macro"
            android:textColor="@color/grey"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/graphics"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center_horizontal"
            android:text="@string/music"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_horizontal"
            android:text="@string/artist"
            android:textColor="@color/grey"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>