<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/breadinfo_bg"
    tools:context=".B1_Cupcake">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:orientation="vertical">

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kg_always_a_good_time"
            android:gravity="center"
            android:text="@string/nb7"
            android:layout_marginLeft="90dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginTop="-90dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/bread_7"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginVertical="120dp"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">

        <!--Actual bread-->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/b7_actual"/>

        <!-- Details -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/def"
            android:fontFamily="@font/josefin_sans_bold"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/def_b7"
            android:textSize="18sp"
            android:fontFamily="@font/josefin_sans"
            android:layout_marginLeft="10dp"
            android:textAlignment="gravity"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/origin"
            android:fontFamily="@font/josefin_sans_bold"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/origin_b7"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/josefin_sans"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--Main Ingredients Text -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="1000dp"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        android:layout_alignParentRight="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/ing"
            android:textSize="20sp"
            android:fontFamily="@font/josefin_sans_bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginRight="52dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <!---List of Ingredients -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/flour"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/water"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">


        <TextView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="@string/flour"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/josefin_sans"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="@string/water"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/josefin_sans"
            android:textSize="19sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/canola_oil" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sugar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">


        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/c_oil"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/josefin_sans"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="@string/sugar"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/josefin_sans"
            android:textSize="19sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/yeast"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/salt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">


        <TextView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="@string/yeast"
            android:layout_marginRight="45dp"
            android:fontFamily="@font/josefin_sans"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:text="@string/salt"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/josefin_sans"
            android:textSize="19sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="146dp"
            android:layout_height="54dp"
            android:background="@drawable/back"/>
    </LinearLayout>

</RelativeLayout>