<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="425dp"
    android:layout_gravity="center"
    android:background="@drawable/board"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:gravity="center"
        android:text="@string/leaving"
        android:textColor="@color/cream"
        android:textSize="38sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMusic"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/cream"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnSound"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/cream"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>